--- a/WebJob/WebJob.csproj
+++ b/WebJob/WebJob.csproj
@@ -2,11 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Dashboard..WebJob</RootNamespace>
+    <RootNamespace>Dashboard.WebJob</RootNamespace>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
